SA-592 Fix 7.3 Notes

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -47,85 +47,112 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
 
 ### Improvements
 
-#### GUI
+#### Technology Tables
 
-- An additional column was added to the **Inventory** --> **Interfaces** table:
+##### New Tables
+
+A new **Virtual-wires** table has been added under **Technology → Interfaces**, supporting:
+
+- Palo Alto PAN-OS
+- Cisco Firepower
+- Fortinet FortiGate / FortiOS
+- Forcepoint NGFW
+
+##### New Columns
+
+The following tables have been updated with new columns:
+
+- **Inventory** --> **Interfaces** table:
   - `Last Status Change`
-- An additional column was added to the **Inventory** --> **Devices** table:
+- **Inventory** --> **Devices** table:
   - `Login IPv4`
   - `Login IPv6`
   - `Switch stack`
-- An additional column was added to the **Management** --> **Discovery History** table:
+- **Technology → Interfaces → Switchport** table:
+  - `Virtual Bridge`
+- **Technology → Addressing → MAC Table** table:
+  - `Virtual Bridge`
+- **Management** --> **Discovery History** table:
   - `Login IPv4`
   - `Login IPv6`
-- An additional column was added to the **Management** --> **Changes** table:
+- **Management** --> **Changes** table:
   - `Login IPv4`
   - `Login IPv6`
-- An additional column was added to the **Management** --> **Changes** --> **Managed IP** table:
+- **Management** --> **Changes** --> **Managed IP** table:
   - `IPv4 Address`
   - `IPv6 Address`
-- An additional column was added to the **Management** --> **Saved config consistency** table:
+- **Management** --> **Saved config consistency** table:
   - `Login IPv4`
   - `Login IPv6`
-- An additional column was added to the **Technology** --> **Platforms** --> **Cisco VSS** --> **Chassis** table:
+- **Technology** --> **Platforms** --> **Cisco VSS** --> **Chassis** table:
   - `Switch Priority`
-- An additional columns were added to the **Technology** --> **Management** --> **Telnet access** table:
+- **Technology** --> **Management** --> **Telnet access** table:
   - `Login IPv4`
   - `Login IPv6`
-- An additional columns were added to the **Technology** --> **Management** --> **Logging** --> **Remote** table:
+- **Technology** --> **Management** --> **Logging** --> **Remote** table:
   - `Host IPv4`
   - `Host IPv6`
   - `Src Address IPv4`
   - `Src Address IPv6`
-- An additional columns were added to the **Technology** --> **Management** --> **NTP** --> **Sources** table:
+- **Technology** --> **Management** --> **NTP** --> **Sources** table:
   - `Source IPv4`
   - `Source IPv6`
-- An additional columns were added to the **Technology** --> **Management** --> **SNMP** --> **Trap Hosts** table:
+- **Technology** --> **Management** --> **SNMP** --> **Trap Hosts** table:
   - `Destination Host IPv4`
   - `Destination Host IPv6`
   - `Source IPv4`
   - `Source IPv6`
-- An additional columns were added to the **Technology** --> **Security** --> **AAA** --> **Servers** table:
+- **Technology** --> **Security** --> **AAA** --> **Servers** table:
   - `Server IPv4`
   - `Server IPv6`
   - `Source IPv4`
   - `Source IPv6`
-- An additional columns were added to the **Discovery Snapshot** --> **Connectivity Report** table:
+- **Discovery Snapshot** --> **Connectivity Report** table:
   - `IPv4`
   - `IPv6`
-- The following columns are now marked as deprecated:
-  - **Inventory** --> **Devices** --> `Login IP`
-  - **Management** --> **Discovery History** --> `Login IP`
-  - **Management** --> **Changes** --> `Login IP`
-  - **Management** --> **Changes** --> **Managed IP** --> `IP Address`
-  - **Management** --> **Saved config consistency** --> `Login IP`
-  - **Technology** --> **Management** --> **Telnet access** --> `Login IP`
-  - **Discovery Snapshot** --> **Connectivity Report** --> `IP`
 
-    !!! warning "Login IP Deprecation"
+##### Deprecated  Columns
 
-        The Login IP (`loginIp`) column is being deprecated and replaced with `loginIpv4` and `loginIpv6`.
-        Please ensure all scripts, automations, or reports are properly updated to reflect this change.
+The following columns are now marked as deprecated:
+
+- **Inventory** --> **Devices** --> `Login IP`
+- **Management** --> **Discovery History** --> `Login IP`
+- **Management** --> **Changes** --> `Login IP`
+- **Management** --> **Changes** --> **Managed IP** --> `IP Address`
+- **Management** --> **Saved config consistency** --> `Login IP`
+- **Technology** --> **Management** --> **Telnet access** --> `Login IP`
+- **Discovery Snapshot** --> **Connectivity Report** --> `IP`
+
+!!! warning "Login IP Deprecation"
+
+    The Login IP (`loginIp`) column is being deprecated and replaced with `loginIpv4` and `loginIpv6`.
+    Please ensure all scripts, automations, or reports are properly updated to reflect this change.
+
+##### Deprecated  Tables
+
+<!-- WE DO NOT REMOVE TABLES OUTSIDE MAJOR RELEASES FIXME -->
 
 - Removed tables of already deprecated API endpoints:
   - `Managed Networks`
   - `Gateway Redundancy`
 
-  !!! info "IPv4 Managed IP Summary table"
+!!! info "IPv4 Managed IP Summary table"
 
-      As of version `7.0`, the Managed Networks and Gateway Redundancy tables have been replaced by the [IPv4 Managed IP Summary table](../../IP_Fabric_GUI/technology_tables/addressing/ipv4-managed-ip-summary.md).
+    As of version `7.0`, the Managed Networks and Gateway Redundancy tables have been replaced by the [IPv4 Managed IP Summary table](../../IP_Fabric_GUI/technology_tables/addressing/ipv4-managed-ip-summary.md).
 
-- IP Input Enhancement:
-  - **Search Functionality**: Users can perform keyword-based searches within the IP list to quickly locate specific entries.
-  - **IP List Management**: Users can efficiently manage IP addresses through enhanced multi-selection capabilities. Multiple IPs can be selected via:
-    - `Shift + Left Click` to select range.
-    - `Click-and-Drag`, similar to text selection in a paragraph. 
+#### GUI
 
-      Once selected, IP addresses can be copied or removed from the list.
+IP Input Enhancement:
+
+- **Search Functionality**: Users can perform keyword-based searches within the IP list to quickly locate specific entries.
+- **IP List Management**: Users can efficiently manage IP addresses through enhanced multi-selection capabilities. Multiple IPs can be selected via:
+  - `Shift + Left Click` to select range.
+  - `Click-and-Drag`, similar to text selection in a paragraph. 
+  - Once selected, IP addresses can be copied or removed from the list.
 
 #### Layout Optimization for Large Circular Graphs
 
-In release 7.2, we added an autonomous optimization switch from circular to universal layout for graphs with more than 100 nodes. This functionality
+In release `7.2`, we added an autonomous optimization switch from circular to universal layout for graphs with more than 100 nodes. This functionality
 is now fully supported at the API level and is also fully integrated into the UI starting with this release.
 
 #### Configuration Management
@@ -151,7 +178,7 @@ is now fully supported at the API level and is also fully integrated into the UI
   - Support for URL filtering has been added.
 
 - **New Capabilities -- PaloAlto (PAN-OS)**
-  - Support for IP and PREDEFINED-IP type objects of `External Dynamic List` has been added.
+  - Support for IP and PREDEFINED-IP type objects of `External Dynamic List` [has been added](#palo-alto-external-dynamic-lists).
 
 - **New Device -- Meraki Cloud-managed Catalyst Switches**
   - Now discoverable via the Meraki API  
@@ -278,21 +305,3 @@ manual link configuration is required to incorporate them into the network model
 To enable this feature, the corresponding [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#enable-manual-links-transparent-firewall) (`ENABLE_MANUAL_LINKS`) must be activated.
 
 Once enabled, transparent firewalls will appear in the **graph topology**, and **basic path lookup** (excluding security policy evaluation) will be supported.
-
-##### Supported Vendors & Technologies
-
- - **Virtual Wire Setup**
-
-  A new table has been added under **Technology → Interfaces → Virtual-wires**, supporting:
-
-  - Palo Alto PAN-OS
-  - Cisco Firepower
-  - Fortinet FortiGate / FortiOS
-  - Forcepoint NGFW
-
- - **Virtual Bridge Property**
-
-  Currently supported for Cisco Firepower. A new **Virtual Bridge** attribute has been added to the following tables:
-
-  - **Technology → Interfaces → Switchport**
-  - **Technology → Addressing → MAC Table**
