NIM-19302 snapshot list redesign

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -26,6 +26,10 @@ tags: ["draft"]
   marking those that are not present in the currently selected snapshot. This change eliminates various glitches
   when a different snapshot is selected while having the attribute filter active.
 - The "Snapshot Retention" page has been renamed to "Snapshot Collection," with a corresponding URL update. This change more accurately reflects the content and purpose of the pages.
+- The snapshot management system has undergone a redesign to enhance usability and efficiency, 
+  particularly when dealing with extensive sets of snapshots. Key improvements include:
+  - Categorization by Time Period: Snapshots are intuitively organized based on their creation time.
+  - Filtering by Name: Users can easily filter snapshots by their names.
 
 #### Network Discovery
 
