MQ-7640: Update release notes and hashes for 7.2.17

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -8,22 +8,22 @@ description: In this section, you can find the release notes for v7.2 releases.
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v7.2.13 (May 21st, 2025; GA)
+## v7.2.17 (June 9th, 2025; GA)
 ```
-SHA256 (ipfabric-update-7-2-13+0.tar.zst.sig) = 72a601e4cc8ab96357a8c9f548baadec325202f2c5cbde9ca0561ce8dfd5ee72
-MD5 (ipfabric-update-7-2-13+0.tar.zst.sig) = e5b8c418ca26e7c6f2238630a31ad383
-SHA256 (ipfabric-7-2-13+0.qcow2) = 89559066030712f77588fbcb3c11d589dc9e6ae0d57d2093325adbb355ccd5e2
-MD5 (ipfabric-7-2-13+0.qcow2) = 42c37a6c19d94972fcf6348aaf236a84
-SHA256 (ipfabric-7-2-13+0.vmdk) = 2e4f16417876d1ad5b1db83734ae072d69a72e9e7acb2d0004264821ab7381b5
-MD5 (ipfabric-7-2-13+0.vmdk) = 695d4a50ca02966347260c25a2c06b52
-SHA256 (ipfabric-7-2-13+0.vhdx.zst) = c2913e00532c463f6169fccfc9bc61f47f4807706383b64064e1f6b962b3e183
-MD5 (ipfabric-7-2-13+0.vhdx.zst) = e6bf775527ec3fa214788ddb590e83c8
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-2-13+0.ova) = 7d139e0cec5c5ddc334c5e36fdcfe4b00482fcc42c5e7dae3ad59fc6ba89a052
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-2-13+0.ova) = 9c6a5e2f3cd60e25f79f9b10d5d4c0aa
-SHA256 (unsupported-ESXi7.0-ipfabric-7-2-13+0.ova) = 3991d48fd1f32af695ff5bc7037b49d83e75c73d15e08a370dd6919c46b5ff4f
-MD5 (unsupported-ESXi7.0-ipfabric-7-2-13+0.ova) = 098e77c4f2000488459a29a6957691e2
-SHA256 (ESXi8.0-ipfabric-7-2-13+0.ova) = 5d7934b2168f1ce92c7da7bff08aabd37e71ba532635c82c7985d48545a01777
-MD5 (ESXi8.0-ipfabric-7-2-13+0.ova) = 51b3bb7cb54160f4295d4abdc9711aff
+SHA256 (ipfabric-update-7-2-17+0.tar.zst.sig) = 3a3b9c0ecab5603297e35db98fd180d7a35c9e5327be02e68501517ee372354e
+MD5 (ipfabric-update-7-2-17+0.tar.zst.sig) = ddb4f8009f23bae7b1c1be55f921ab9e
+SHA256 (ipfabric-7-2-17+0.qcow2) = 6249b2a155176d55b1d2805256ca975c2884feca4968404be54869a26049bf21
+MD5 (ipfabric-7-2-17+0.qcow2) = 00f4923c04cb735312c41c4a13fc588d
+SHA256 (ipfabric-7-2-17+0.vmdk) = fb0cbb4be5d100660a7af201477b891cb6a4d704f108d085922b6cfe14edac95
+MD5 (ipfabric-7-2-17+0.vmdk) = 6aa0415042cf128f62461ee79261b6ac
+SHA256 (ipfabric-7-2-17+0.vhdx.zst) = f3ea8509b6d7b0b55a5e9d25f936dc6a5822fe761739170ee404809a78ffbd89
+MD5 (ipfabric-7-2-17+0.vhdx.zst) = 4d6b8fa3e47e70aaf36d21e9f680670c
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-2-17+0.ova) = 842c90a08c62dd4b46902b4d7753bb71f2678d7f4c0f0055b53656fccea3bc14
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-2-17+0.ova) = 1406790ec4f1cc2f1e694465d91927e9
+SHA256 (unsupported-ESXi7.0-ipfabric-7-2-17+0.ova) = 789b11f70248a9a378a0866de72eb4c2c28c58684b48229b5159fc4c77ba9f6d
+MD5 (unsupported-ESXi7.0-ipfabric-7-2-17+0.ova) = f01491bf442d304105a9c9e13a26f2cd
+SHA256 (ESXi8.0-ipfabric-7-2-17+0.ova) = 25da28f1a6320f5c7a121ce517835407447eac5e15bc103ecb5c3143f2b93e30
+MD5 (ESXi8.0-ipfabric-7-2-17+0.ova) = a90c335120c91b98a77c0e61f7bfa0e5
 ```
 ### Post-Upgrade Notice
 
