--- a/docs/releases/release_notes_low-level/6.x/6.10.x/6.10.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.10.x/6.10.0.md
@@ -6,7 +6,13 @@ search:
 
 # LLRN 6.10.0
 
-These are low-level release notes for IP Fabric release `6.10.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 27 issues.
+These are low-level release notes for IP Fabric release `6.10.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 28 issues.
+
+## Epics
+
+Epics are high-level features, that may consist of many tasks.
+
+- `NIM-15729` -- Highest -- The appliance upgrade process is broken and requires full rewrite
 
 ## Bugs
 
