--- a/docs/releases/release_notes_low-level/7.x/7.0.md
+++ b/docs/releases/release_notes_low-level/7.x/7.0.md
@@ -6,7 +6,7 @@ search:
 
 # LLRN 7.0
 
-These are low-level release notes for IP Fabric release branch `7.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 596 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 597 fixed issues.
 
 ## 7.0.15
 
@@ -259,6 +259,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-14269` -- Medium -- Create API test framework
 - `NIM-14308` -- Medium -- Enhance OAS setup
 - `NIM-14354` -- Medium -- Add account details as extra columns to cloud elements (AWS, Azure, GCP)
+- `NIM-14479` -- Medium -- [validate] API V7 breaking changes
 - `NIM-14777` -- Medium -- SD-WAN Versa - Configuration backup for diff
 - `NIM-14786` -- Medium -- Infrastructure stress testing
 - `NIM-14924` -- Medium -- Stormshield - NAT, IPSEC
