--- a/docs/releases/release_notes_low-level/7.x/7.2.md
+++ b/docs/releases/release_notes_low-level/7.x/7.2.md
@@ -6,7 +6,55 @@ search:
 
 # LLRN 7.2
 
-These are low-level release notes for IP Fabric release branch `7.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 482 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 502 fixed issues.
+
+## 7.2.17
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-19007` -- Highest -- PATCH `/settings/credentials/{id}` does not allow for changing username/password
+- `NIM-19790` -- Highest -- syslogWorker is not logging after logrotate runs on the structured json file
+
+## 7.2.16
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-19674` -- Medium -- Logrotate missing for syslogWorker `json` files
+
+## 7.2.15
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-19068` -- Highest -- Slow calcVirtualMachineDevices query
+- `NIM-19070` -- Highest -- Slow calcVirtualMachineInterfaces query
+- `NIM-19270` -- High -- VeloCloud routes not being mapped/parsed
+- `NIM-19366` -- Medium -- Callhome-bugfix: vmware 7.0.0-48 commands/vmware/velocloud/edge/getEdgeConfigurationModules
+- `NIM-19369` -- High -- Opengear OM/ACM config management doesn't work - Hostname task isn't configured for version
+- `NIM-19446` -- Medium -- IOS-XR segment routing - No nexthops found for undefined
+- `NIM-19471` -- Medium -- Azure - use lowercase when searching for subnetPrefix & routeTable
+- `NIM-19473` -- Medium -- Add pagination support for backup command in cisco/routingTable
+- `NIM-19476` -- Highest -- Deleting a Path Verification removes different row than where delete was clicked
+- `NIM-19490` -- Medium -- IPF is not able to discover endpoints in vNet vn-prod_wvd-use2-01
+- `NIM-19494` -- Highest -- scanWorker creates massive log outputs and includes sensitive information
+- `NIM-19508` -- Medium -- syslogWorker logs are placed in syslog file and also contain sensitive information
+- `NIM-19528` -- Highest -- Something went wrong - frontend error on upgrade from 7.0.15 to 7.2.13
+- `NIM-19536` -- Highest -- Worker and syslogworker failure due to "Sorry, the maximum number of sessions are active" message
+- `NIM-19665` -- Highest -- `ipf-eol` package has migrations
+
+## 7.2.14
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-19072` -- Highest -- Mist worker job preventing Discovery completion
+- `NIM-19091` -- Highest -- Cisco 9300 - Routing information not displayed
 
 ## 7.2.13
 
