known_issue_NIM-19890 mentioned in 7.2 RN

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -26,9 +26,11 @@ MD5 (unsupported-ESXi7.0-ipfabric-7-2-13+0.ova) = 098e77c4f2000488459a29a6957691
 SHA256 (ESXi8.0-ipfabric-7-2-13+0.ova) = 5d7934b2168f1ce92c7da7bff08aabd37e71ba532635c82c7985d48545a01777
 MD5 (ESXi8.0-ipfabric-7-2-13+0.ova) = 51b3bb7cb54160f4295d4abdc9711aff
 ```
-### Post-Upgrade Notice
+### Fixes
 
-If you encounter a `Something went wrong` error when accessing the IP Fabric GUI after upgrading, clear your browser cache using `CTRL`+`F5` (Windows/Linux) or `Command`+`Shift`+`R` (macOS). This resolves issues caused by outdated cached resources.
+#### Something went wrong Error
+
+After an upgrade  a `Something went wrong` error when accessing the IP Fabric GUI after upgrading was shown. This issue has been resolved on `7.2.17` release.
 
 !["Something went wrong." error](7.2/7.2_browser_error.png){.center}
 
@@ -115,6 +117,35 @@ The new BGP communities filtering feature during discovery correctly passes tags
    **remove** the BGP communities filter from `Discovery Settings`  
 
 These issues are scheduled for resolution in an upcoming patch release.
+
+#### Configuration management process not closing SSH sessions
+
+On HP Aruba SW family devices, the Configuration Management process doesn't close SSH connections.
+In case a login banner is not detected, SSH sessions may remain open.
+
+
+To check the entire situation, go to the IPF appliance CLI and run the following command:
+
+```bash
+netstat -tnpa | grep 'ESTABLISHED' | grep syslogWorkerBu | grep 22
+```
+
+If SSH connections remain open, you will see the following:
+
+```bash
+root@ipfabric:~# netstat -tnpa | grep 'ESTABLISHED' | grep syslogWorkerBu | grep 22
+tcp        0      0 10.0.192.108:52784      10.20.94.22:22          ESTABLISHED 624/syslogWorkerBui
+tcp        0      0 10.0.192.108:22184      10.20.88.20:22          ESTABLISHED 624/syslogWorkerBui
+tcp        0      0 10.0.192.108:5650       10.20.130.22:22         ESTABLISHED 624/syslogWorkerBui
+tcp        0      0 10.0.192.108:27698      10.20.130.21:22         ESTABLISHED 624/syslogWorkerBui
+tcp        0      0 10.0.192.108:30666      10.20.94.24:22          ESTABLISHED 624/syslogWorkerBui
+```
+
+To resolve this problem, please proceed with restarting the Configuration Management service using:
+
+```bash
+systemctl restart ipf-discovery-syslogworker.service
+```
 
 ## v7.2.5 (March 17th, 2025; EA)
 
