--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -227,7 +227,7 @@ is now fully supported at the API level and is also fully integrated into the UI
 - **New Device -- Meraki Cloud-managed Catalyst Switches**
   - Now discoverable via the Meraki API  
   - Identification: Firmware prefix `CS` and Monitoring Version `n/a`  
-  - Discovery can be disabled via [feature flags](../../System_Administration/Command_Line_Interface/Feature_Flags/#meraki-catalyst-switches-discovery).
+  - Discovery can be disabled via [feature flags](../../System_Administration/Command_Line_Interface/Feature_Flags.md#meraki-catalyst-switches-discovery).
 
 #### Path Lookup
 
