--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -251,6 +251,8 @@ and enter the name of the list as it appears in the configuration.
 - Added IPv6 support for Cisco ASA IPv6 tunnels.
 - Added IPv6 support for Cisco ASA, IOS, and IOS-XE IPv6 IPsec.
 - New `Switch stack` column added in **Inventory** --> **Devices** to show if switch is considered as stack
+- Added ARP table support for Meraki L3 switches.
+- Improved STP support for Meraki switches.
 
 #### Advanced Filters
 
