Update snippet, add 7.2.13 back, use same ssh sessions description

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -29,7 +29,7 @@ MD5 (ESXi8.0-ipfabric-7-2-17+0.ova) = a90c335120c91b98a77c0e61f7bfa0e5
 
 #### Something went wrong Error
 
-After an upgrade  a `Something went wrong` error when accessing the IP Fabric GUI after upgrading was shown. This issue has been resolved on `7.2.17` release.
+After an upgrade  a `Something went wrong` error when accessing the IP Fabric GUI after upgrading was shown. This issue was resolved in the `7.2.17` release but may still occur in rare situations. Clear the browser cache to resolve this issue.
 
 !["Something went wrong." error](7.2/7.2_browser_error.png){.center}
 
@@ -117,34 +117,33 @@ The new BGP communities filtering feature during discovery correctly passes tags
 
 These issues are scheduled for resolution in an upcoming patch release.
 
-#### Configuration management process not closing SSH sessions
+#### Configuration Management Process Fails to Close SSH Sessions
 
-On HP Aruba SW family devices, the Configuration Management process doesn't close SSH connections.
-In case a login banner is not detected, SSH sessions may remain open.
+On HPE `arubasw` family devices, the Configuration Management process sometimes fails to terminate SSH connections properly. This occurs when a login banner isn't detected, causing SSH sessions to remain open indefinitely.
 
+To verify if this is happening, access your IP Fabric appliance's command line interface and execute the following when the Configuration Management process is not running:
 
-To check the entire situation, go to the IPF appliance CLI and run the following command:
-
-```bash
-netstat -tnpa | grep 'ESTABLISHED' | grep syslogWorkerBu | grep 22
+``` bash
+netstat -tnpa | grep 'ESTABLISHED' | grep syslogWorkerBu | grep :22
 ```
 
-If SSH connections remain open, you will see the following:
+If you see persistent SSH connections, the output will display multiple active sessions like this:
 
-```bash
-root@ipfabric:~# netstat -tnpa | grep 'ESTABLISHED' | grep syslogWorkerBu | grep 22
+``` bash
+root@ipfabric:~# netstat -tnpa | grep 'ESTABLISHED' | grep syslogWorkerBu | grep :22
 tcp        0      0 10.0.192.108:52784      10.20.94.22:22          ESTABLISHED 624/syslogWorkerBui
 tcp        0      0 10.0.192.108:22184      10.20.88.20:22          ESTABLISHED 624/syslogWorkerBui
-tcp        0      0 10.0.192.108:5650       10.20.130.22:22         ESTABLISHED 624/syslogWorkerBui
 tcp        0      0 10.0.192.108:27698      10.20.130.21:22         ESTABLISHED 624/syslogWorkerBui
 tcp        0      0 10.0.192.108:30666      10.20.94.24:22          ESTABLISHED 624/syslogWorkerBui
 ```
 
-To resolve this problem, please proceed with restarting the Configuration Management service using:
+To resolve this, restart the Configuration Management service with command:
 
-```bash
+```
 systemctl restart ipf-discovery-syslogworker.service
 ```
+
+## v7.2.13 (May 21st, 2025; GA)
 
 ## v7.2.5 (March 17th, 2025; EA)
 
