Add known issue about IP address selection to RN

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -351,3 +351,7 @@ manual link configuration is required to incorporate them into the network model
 To enable this feature, the corresponding [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#enable-manual-links-transparent-firewall) (`ENABLE_MANUAL_LINKS`) must be activated.
 
 Once enabled, transparent firewalls will appear in the **graph topology**, and **basic path lookup** (excluding security policy evaluation) will be supported.
+
+!!! info "Visualization Setup"
+
+    In case that you want to edit **Manual Link Protocol Settings** --> **Line Cap Label** field, it incorrectly permits IP address selection.
