Update 7.5 release notes with VRF labels on topology graph edges

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -22,6 +22,7 @@ tags: ["draft"]
 
 - File names of exported graphs were improved. Instead of naming all files `graph`, the file name
   now consists of basic view information (saved view name, site name or path lookup IPs) and a timestamp.
+- VRF labels are now displayed as line-cap labels on topology graph edges for Layer 3 protocols, making it easier to identify VRF associations directly within the graph.
 - The attribute filter in the header now displays attributes and values from all loaded snapshots, clearly
   marking those that are not present in the currently selected snapshot. This change eliminates various glitches
   when a different snapshot is selected while having the attribute filter active.
