NIM-19719 - add f5 velos docs to api, add release notes

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -50,7 +50,8 @@ tags: ["draft"]
 - A new task Cloud Scaling Groups was added to save more information related to scaling groups in the device JSON.
 - A new task Cloud Interface Endpoints was added to save more information related to interface endpoints in the device JSON.
 - Tables in **Technology → Cloud → Endpoints** now also include instances from Azure Virtual Machine Scale Sets in Uniform mode.
-
+- Added support for F5 rSeries (F5OSA) and F5 VELOS (F5OSC) discovery.
+  
   !!! warning "Do not forget to update IAM policy"
 
       To collect VM instances from Azure Virtual Machine Scale Sets in Uniform mode, the corresponding IAM policy must be updated. 
