NIM-19953 Explain renaming IPvX routing tables in RN

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -65,3 +65,7 @@ tags: ["draft"]
 ### Other Changes
 
 - Removed feature flag `ENABLE_ACI_FVTENANT`
+- Tables **IPv4 routing table** and **IPv6 routing table** were previously named **Cumulative IPv4 routing table**
+  and **Cumulative IPv6 routing table**. These original names were misleading when displayed in the Device Explorer.
+  Aside from the renaming, the tables remain unchanged — same data, same URL, and same structure.
+
