NIM-16703 Add RN for path lookup typeaheads respecting attribute filters

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -31,6 +31,7 @@ tags: ["draft"]
   particularly when dealing with extensive sets of snapshots. Key improvements include:
   - Categorization by Time Period: Snapshots are intuitively organized based on their creation time.
   - Filtering by Name: Users can easily filter snapshots by their names.
+- **Hostname** and **IP address** typeahead suggestions in the **Path Lookup** forms within **Diagrams** now respect the **Attribute filters** applied in the top bar.
 
 #### Network Discovery
 
