Entering IP addresses known issue doc on main

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -59,6 +59,10 @@ To resolve this, restart the Configuration Management service with command:
 systemctl restart ipf-discovery-syslogworker.service
 ```
 
+#### IP addresses entered in the Settings UI may not be saved in some cases
+
+When entering IP addresses in the Settings UI, changes will only be saved if you click the **Add to list** button next to the input field or press the **Enter** key. Although a red validation message appears below the field, it does not prevent the UI from saving the settings—however, any IP addresses not added to the list will be omitted. This issue affects all input fields that accept IP addresses.
+
 ### New Features
 
 #### IPv6 Discovery Support
